# AmbilightApp_Old

./: .gitignore  AmbilightappConfig.h.in  CHANGELOG.md  CMakeLists.txt  Compile and Build.bat  LICENSE  README.md  version
.ci/: ci_build.sh
.github/: FUNDING.yml
.github/workflows/: push-master.yml
cmake/: Dependencies.cmake  FindGitVersion.cmake  packages.cmake
cmake/arch/: INSTALL  PKGBUILD
cmake/debian/: postinst  preinst  prerm
cmake/desktop/: ambilightapp.desktop
cmake/osxbundle/: Ambilightapp.icns  Info.plist  autorun.scpt
cmake/rpm/: postinst  preinst  prerm
cmake/win/: win.rc.in
include/api/: AmbilightAPI.h  BaseAPI.h  CallbackAPI.h
include/base/: AccessManager.h  AllHeaders_pch.h  AmbilightAppInstance.h  AmbilightAppManager.h  ColorCalibration.h  ComponentController.h  Grabber.h  GrabberWrapper.h  ImageColorAveraging.h  ImageToLedManager.h  LedCalibration.h  Muxer.h  NetworkForwarder.h  RawUdpServer.h  Smoothing.h  SystemControl.h  SystemWrapper.h  VideoControl.h
include/blackborder/: BlackBorderDetector.h  BlackBorderProcessor.h
include/boblightserver/: BoblightServer.h
include/bonjour/: DiscoveryRecord.h  DiscoveryWrapper.h
include/cec/: WrapperCEC.h
include/db/: AuthTable.h  DBManager.h
include/effectengine/: Animation4Music_PulseBlue.h  Animation4Music_PulseGreen.h  Animation4Music_PulseMulti.h  Animation4Music_PulseMultiFast.h  Animation4Music_PulseMultiSlow.h  Animation4Music_PulseRed.h  Animation4Music_PulseWhite.h  Animation4Music_PulseYellow.h  Animation4Music_QuatroBlue.h  Animation4Music_QuatroGreen.h  Animation4Music_QuatroMulti.h  Animation4Music_QuatroMultiFast.h  Animation4Music_QuatroMultiSlow.h  Animation4Music_QuatroRed.h  Animation4Music_QuatroWhite.h  Animation4Music_QuatroYellow.h  Animation4Music_StereoBlue.h  Animation4Music_StereoGreen.h  Animation4Music_StereoMulti.h  Animation4Music_StereoMultiFast.h  Animation4Music_StereoMultiSlow.h  Animation4Music_StereoRed.h  Animation4Music_StereoWhite.h  Animation4Music_StereoYellow.h  Animation4Music_TestEq.h  Animation4Music_WavesPulse.h  Animation4Music_WavesPulseFast.h  Animation4Music_WavesPulseSlow.h  AnimationBase.h  Animation_CandleLight.h  Animation_Fade.h  Animation_KnightRider.h  Animation_MoodBlobs.h  Animation_Plasma.h  Animation_Police.h  Animation_RainbowWaves.h  Animation_Sparks.h  Animation_Swirl.h  Animation_SystemShutdown.h  Animation_Waves.h  (+2 more)
include/flatbufserver/: FlatBufferConnection.h  FlatBufferServer.h
include/jsonserver/: JsonServer.h
include/leddevice/: LedDevice.h  LedDeviceWrapper.h
include/mqtt/: mqtt.h
include/proto-nano-server/: ProtoNanoClientConnection.h  message.pb.h
include/ssdp/: SSDPDiscover.h  SSDPHandler.h  SSDPServer.h
include/utils/: ChannelCalibration.h  Components.h  GlobalSignals.h  InternalClock.h  LutCalibrator.h  Macros.h  MemoryBuffer.h  NetOrigin.h  PerformanceCounters.h
include/webserver/: WebServer.h
resources/: CMakeLists.txt  resources.qrc.in
sources/: CMakeLists.txt
sources/ambilightapp/: AmbilightAppDaemon.cpp  AmbilightAppDaemon.h  CMakeLists.txt  SuspendHandlerLinux.cpp  SuspendHandlerLinux.h  SuspendHandlerMacOS.h  SuspendHandlerMacOS.mm  SuspendHandlerWindows.cpp  SuspendHandlerWindows.h  main.cpp  systray.cpp  systray.h
sources/ambilightapp-remote/: CMakeLists.txt  JsonConnection.cpp  JsonConnection.h  ambilightapp-remote.cpp
sources/api/: AmbilightAPI.cpp  BaseAPI.cpp  CMakeLists.txt  CallbackAPI.cpp
sources/base/: AccessManager.cpp  AmbilightAppInstance.cpp  AmbilightAppManager.cpp  CMakeLists.txt  ColorCalibration.cpp  ComponentController.cpp  DetectionAutomatic.cpp  Grabber.cpp  GrabberHelper.cpp  GrabberWrapper.cpp  ImageColorAveraging.cpp  ImageToLedManager.cpp  InstanceConfig.cpp  LedCalibration.cpp  Muxer.cpp  NetworkForwarder.cpp  RawUdpServer.cpp  Smoothing.cpp  SoundCapture.cpp  SystemControl.cpp  SystemWrapper.cpp  VideoControl.cpp  resource.qrc
sources/base/schema/: schema-backgroundEffect.json  schema-blackborderdetector.json  schema-color.json  schema-device.json  schema-foregroundEffect.json  schema-general.json  schema-ledConfig.json  schema-leds.json  schema-smoothing.json  schema-systemControl.json  schema-systemGrabber.json  schema-videoControl.json
sources/blackborder/: BlackBorderDetector.cpp  BlackBorderProcessor.cpp  CMakeLists.txt
sources/boblightserver/: BoblightClientConnection.cpp  BoblightClientConnection.h  BoblightServer.cpp  CMakeLists.txt
sources/bonjour/: BonjourServiceHelper.cpp  BonjourServiceRegister.cpp  CMakeLists.txt  DiscoveryRecord.cpp  DiscoveryWrapper.cpp
sources/cec/: WrapperCEC.cpp  cecHandler.cpp
sources/commandline/: CMakeLists.txt
sources/db/: AuthTable.cpp  CMakeLists.txt  DBManager.cpp  InstanceTable.cpp  SettingsTable.cpp
sources/effectengine/: Animation4Music_PulseBlue.cpp  Animation4Music_PulseGreen.cpp  Animation4Music_PulseMulti.cpp  Animation4Music_PulseMultiFast.cpp  Animation4Music_PulseMultiSlow.cpp  Animation4Music_PulseRed.cpp  Animation4Music_PulseWhite.cpp  Animation4Music_PulseYellow.cpp  Animation4Music_QuatroBlue.cpp  Animation4Music_QuatroGreen.cpp  Animation4Music_QuatroMulti.cpp  Animation4Music_QuatroMultiFast.cpp  Animation4Music_QuatroMultiSlow.cpp  Animation4Music_QuatroRed.cpp  Animation4Music_QuatroWhite.cpp  Animation4Music_QuatroYellow.cpp  Animation4Music_StereoBlue.cpp  Animation4Music_StereoGreen.cpp  Animation4Music_StereoMulti.cpp  Animation4Music_StereoMultiFast.cpp  Animation4Music_StereoMultiSlow.cpp  Animation4Music_StereoRed.cpp  Animation4Music_StereoWhite.cpp  Animation4Music_StereoYellow.cpp  Animation4Music_TestEq.cpp  Animation4Music_WavesPulse.cpp  Animation4Music_WavesPulseFast.cpp  Animation4Music_WavesPulseSlow.cpp  (+38 more)
sources/utils/: CMakeLists.txt  ChannelCalibration.cpp  ColorSpaceCalibration.cpp  DefaultSignalHandler.cpp  FileUtils.cpp  FrameDecoder.cpp  Image.cpp  ImageData.cpp  InternalClock.cpp  Logger.cpp  LutCalibrator.cpp  Macros.cpp  PerformanceCounters.cpp  SystemPerformanceCounters.cpp  SystemPerformanceCounters.mm  VideoMemoryManager.cpp
www/: index.html
(+172 files in other folders)
